ansible/roles/manifests/templates/manifests/k3s/srscu-f1ap-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: "srscu-f1ap-service"
spec:
  type: ClusterIP
  selector:
    app: "srscu"
  ports:
    - name: "f1ap"
      protocol: "SCTP"
      port: 38472
      targetPort: 38472
