ansible/roles/manifests/templates/manifests/k3s/srsdu-zmq-node-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: "srsdu-zmq-node-service"
spec:
  type: NodePort
  selector:
    app: "srsdu"
  ports:
    - name: "zmq"
      protocol: "TCP"
      port: 2000
      targetPort: 2000
      nodePort: 2000
