ansible/roles/manifests/templates/manifests/k3s/srscu-f1u-network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: srscu-f1u-network-policy
spec:
  podSelector:
    matchLabels:
      app: srscu
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: srsdu
      ports:
        - protocol: UDP
          port: 2153
