ansible/roles/manifests/templates/manifests/k3s/srscu-n23-network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: srscu-n23-network-policy
spec:
  podSelector:
    matchLabels:
      app: srscu
  ingress:
    - ports:
        - protocol: UDP
          port: 2152
